build_output7.txt
warning: neuro-spike-kernels@0.9.2: ✓ compiled spiking_network.cu → spiking_network_sm_120.ptx (PTX version patched to 8.5)
warning: neuro-spike-kernels@0.9.2: ✓ compiled vector_similarity.cu → vector_similarity_sm_120.ptx (PTX version patched to 8.5)
warning: neuro-spike-kernels@0.9.2: ✓ compiled satsolver.cu → satsolver_sm_120.ptx (PTX version patched to 8.5)
   Compiling neuro-spike-core v0.9.2 (/home/raulmc/ship_of_theseus_rs/neuro-spike/neuro-spike-core)
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `neuro_spike_core`
 --> neuro-spike/neuro-spike-core/src/backend/mod.rs:8:5
  |
8 | use neuro_spike_core::telemetry::gpu_telemetry::GpuTelemetry;
  |     ^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `neuro_spike_core`
  |
help: there is a crate or module with a similar name
  |
8 - use neuro_spike_core::telemetry::gpu_telemetry::GpuTelemetry;
8 + use neuro_spike_bridge::telemetry::gpu_telemetry::GpuTelemetry;
  |

warning: unused import: `DateTime`
 --> neuro-spike/neuro-spike-core/src/trading/mod.rs:8:14
  |
8 | use chrono::{DateTime, Utc};
  |              ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `Deserialize`
 --> neuro-spike/neuro-spike-core/src/trading/mod.rs:9:13
  |
9 | use serde::{Deserialize, Serialize};
  |             ^^^^^^^^^^^

warning: unused import: `crate::trading::MarketFeed`
 --> neuro-spike/neuro-spike-core/src/backend/mod.rs:7:5
  |
7 | use crate::trading::MarketFeed;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0433]: failed to resolve: use of undeclared type `RuntimeBuilder`
   --> neuro-spike/neuro-spike-core/src/backend/mod.rs:103:17
    |
103 |                 RuntimeBuilder::new()
    |                 ^^^^^^^^^^^^^^ use of undeclared type `RuntimeBuilder`

error[E0599]: no method named `function` found for struct `jlrs::prelude::Module<'scope>` in the current scope
   --> neuro-spike/neuro-spike-core/src/backend/mod.rs:123:26
    |
122 |                       let func = Module::main(&frame)
    |  ________________________________-
123 | |                         .function(&mut frame, "run_lsm_step")
    | |                         -^^^^^^^^ method not found in `jlrs::prelude::Module<'_>`
    | |_________________________|
    |

error[E0277]: the trait bound `Vec<f32>: IntoJulia` is not satisfied
   --> neuro-spike/neuro-spike-core/src/backend/mod.rs:126:61
    |
126 |                     let inputs_val = Value::new(&mut frame, dummy_inputs);
    |                                      ----------             ^^^^^^^^^^^^ the trait `IntoJulia` is not implemented for `Vec<f32>`
    |                                      |
    |                                      required by a bound introduced by this call
    |
    = help: the trait `ForeignType` is not implemented for `Vec<f32>`
    = note: Custom types that implement `IntoJulia` should be generated with JlrsCore.reflect
    = note: Do not implement `ForeignType` or `OpaqueType` unless this type is exported to Julia with `julia_module!`
    = help: the following other types implement trait `IntoJulia`:
              ()
              *mut T
              *mut c_void
              Tuple0
              Tuple10<T1, T2, T3, T4, T5, T6, T7, T8, T9, T10>
              Tuple11<T1, T2, T3, T4, T5, T6, T7, T8, T9, T10, T11>
              Tuple12<T1, T2, T3, T4, T5, T6, T7, T8, T9, T10, T11, T12>
              Tuple13<T1, T2, T3, T4, T5, T6, T7, T8, T9, T10, T11, T12, T13>
            and 43 others
    = note: required for `Vec<f32>` to implement `OpaqueType`
    = note: required for `Vec<f32>` to implement `IntoJulia`
note: required by a bound in `jlrs::prelude::Value::<'_, '_>::new`
   --> /home/raulmc/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/jlrs-0.22.1/src/data/managed/value/mod.rs:168:12
    |
166 |     pub fn new<'target, V, Tgt>(target: Tgt, value: V) -> ValueData<'target, 'static, Tgt>
    |            --- required by a bound in this associated function
167 |     where
168 |         V: IntoJulia,
    |            ^^^^^^^^^ required by this bound in `Value::<'_, '_>::new`

error[E0599]: no method named `function` found for struct `jlrs::prelude::Module<'scope>` in the current scope
   --> neuro-spike/neuro-spike-core/src/backend/mod.rs:156:30
    |
155 |                           let func = Module::main(&frame)
    |  ____________________________________-
156 | |                             .function(&mut frame, "run_lsm_step")
    | |                             -^^^^^^^^ method not found in `jlrs::prelude::Module<'_>`
    | |_____________________________|
    |

error[E0277]: the trait bound `Vec<f32>: IntoJulia` is not satisfied
   --> neuro-spike/neuro-spike-core/src/backend/mod.rs:159:65
    |
159 |                         let inputs_val = Value::new(&mut frame, receptors);
    |                                          ----------             ^^^^^^^^^ the trait `IntoJulia` is not implemented for `Vec<f32>`
    |                                          |
    |                                          required by a bound introduced by this call
    |
    = help: the trait `ForeignType` is not implemented for `Vec<f32>`
    = note: Custom types that implement `IntoJulia` should be generated with JlrsCore.reflect
    = note: Do not implement `ForeignType` or `OpaqueType` unless this type is exported to Julia with `julia_module!`
    = help: the following other types implement trait `IntoJulia`:
              ()
              *mut T
              *mut c_void
              Tuple0
              Tuple10<T1, T2, T3, T4, T5, T6, T7, T8, T9, T10>
              Tuple11<T1, T2, T3, T4, T5, T6, T7, T8, T9, T10, T11>
              Tuple12<T1, T2, T3, T4, T5, T6, T7, T8, T9, T10, T11, T12>
              Tuple13<T1, T2, T3, T4, T5, T6, T7, T8, T9, T10, T11, T12, T13>
            and 43 others
    = note: required for `Vec<f32>` to implement `OpaqueType`
    = note: required for `Vec<f32>` to implement `IntoJulia`
note: required by a bound in `jlrs::prelude::Value::<'_, '_>::new`
   --> /home/raulmc/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/jlrs-0.22.1/src/data/managed/value/mod.rs:168:12
    |
166 |     pub fn new<'target, V, Tgt>(target: Tgt, value: V) -> ValueData<'target, 'static, Tgt>
    |            --- required by a bound in this associated function
167 |     where
168 |         V: IntoJulia,
    |            ^^^^^^^^^ required by this bound in `Value::<'_, '_>::new`

warning: unused variable: `render_price`
   --> neuro-spike/neuro-spike-core/src/trading/mod.rs:271:9
    |
271 |     let render_price = feed.ch2_price_usd;
    |         ^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_render_price`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `asi_price`
   --> neuro-spike/neuro-spike-core/src/trading/mod.rs:272:9
    |
272 |     let asi_price = feed.asi_price_usd;
    |         ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_asi_price`

warning: unused variable: `near_price`
   --> neuro-spike/neuro-spike-core/src/trading/mod.rs:273:9
    |
273 |     let near_price = feed.near_price_usd;
    |         ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_near_price`

warning: unused variable: `btc_price`
   --> neuro-spike/neuro-spike-core/src/trading/mod.rs:274:9
    |
274 |     let btc_price = feed.btc_price_usd;
    |         ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_btc_price`

warning: unused variable: `pepe_price`
   --> neuro-spike/neuro-spike-core/src/trading/mod.rs:275:9
    |
275 |     let pepe_price = feed.pepe_price_usd;
    |         ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_pepe_price`

warning: unused variable: `render_price`
   --> neuro-spike/neuro-spike-core/src/trading/mod.rs:356:9
    |
356 |     let render_price = feed.ch2_price_usd;
    |         ^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_render_price`

warning: unused variable: `asi_price`
   --> neuro-spike/neuro-spike-core/src/trading/mod.rs:357:9
    |
357 |     let asi_price = feed.asi_price_usd;
    |         ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_asi_price`

warning: unused variable: `near_price`
   --> neuro-spike/neuro-spike-core/src/trading/mod.rs:358:9
    |
358 |     let near_price = feed.near_price_usd;
    |         ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_near_price`

warning: unused variable: `btc_price`
   --> neuro-spike/neuro-spike-core/src/trading/mod.rs:359:9
    |
359 |     let btc_price = feed.btc_price_usd;
    |         ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_btc_price`

warning: unused variable: `pepe_price`
   --> neuro-spike/neuro-spike-core/src/trading/mod.rs:360:9
    |
360 |     let pepe_price = feed.pepe_price_usd;
    |         ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_pepe_price`

warning: unused variable: `render_raw`
   --> neuro-spike/neuro-spike-core/src/market/mod.rs:245:9
    |
245 |     let render_raw = cg.as_ref().and_then(|c| c.render_token.as_ref()).map(|u| u.usd);
    |         ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_render_raw`

Some errors have detailed explanations: E0277, E0433, E0599.
For more information about an error, try `rustc --explain E0277`.
warning: `neuro-spike-core` (lib) generated 14 warnings
error: could not compile `neuro-spike-core` (lib) due to 6 previous errors; 14 warnings emitted
